--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
           <span class="visually-hidden">Next</span>
         </button>
       </div>
-        <div id="barra">RECETAS</div>
+      <div id="barra">RECETASs</div>
      
      <div class=" container d-flex justify-content-between flex-wrap">
       <div  class="card m-auto   mt-3   border-dark hover-card col-12" style="width: 14rem; height: 15rem;" >
-        <a href="file:///C:/Users/Daniel/OneDrive/Documentos/HTML/receta/empanadas.html" class="text-decoration-none" target="_blank"> 
+        <a href="./empanadas.html" class="text-decoration-none" target="_blank"> 
          <img src="imagenes receta/1000_F_309844606_gUF5TdV8Fcrjostmom0T659W8G36TfE0.jpg" class="card-img-top" alt="empanadas">
          <div class="card-body">
           <h5 class="titulo text-center text-dark"> Empanadas</h5>
