--- a/polloAsado.html
+++ b/polloAsado.html
@@ -8,6 +8,47 @@
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    
+    <header>
+        <img src="./multimedia/logo.png" alt="Recetas Deliciosas" id="logo"> 
+        <nav class="nav">
+           <ul class="list">
+            <li><a href="#nav--list">Inicio</a> </li>
+            <li><a href="registro.html">Registrate</a> </li>
+            <li><a href="productos.html">Productos</a> </li>
+            <li><a href="#barra">Recetas</a> </li>
+            <li><a href="#redesSociales">Contacto</a> </li>
+           </ul>
+        </nav>
+  
+        <a href="productos.html" >
+          <svg xmlns="http://www.w3.org/2000/svg" class="carrito" width="35"height="35"viewBox="0 0 512 496">
+          <path fill="currentColor"d="M448 69H137l-3-12q-5-23-22.5-37.5T70 5H21q-9 0-15 6T0 27q0 9 6 15t15 6h49q19 0 22 17l49 256q6 21 23.5 34t38.5 13h202q10 0 16-6t6-15q0-22-22-22H203q-14 0-20-12l-2-9h214q20 0 36.5-12t22.5-31l58-123v-5q0-27-18.5-45.5T448 69zM192 261h-19l-28-149h47v149zm85 0h-42V112h42v149zm86 0h-43V112h43v149zm53-17v2q-3 10-11 13V112h43q18 0 21 17zM256 432q0 18-12.5 30.5T213 475q-17 0-29.5-12.5T171 432t12.5-30.5T213 389q18 0 30.5 12.5T256 432zm171 0q0 18-12.5 30.5T384 475t-30.5-12.5T341 432t12.5-30.5T384 389t30.5 12.5T427 432z"/>
+          </svg> 
+        </a> 
+        <div class="buscador">
+          <input placeholder="Buscar recetas.." id="input"class="input" name="text" type="text"/>
+        </div>
+      </header>
+      <main>
+
+      </main>
+      <footer class="footer mt-4">
+        <div class="container">
+          <div class="row">
+            <div class="col">
+                <p class="footer-text">Recetas Deliciosas &copy; 2023-Todos los derechos reservados</p>
+            </div>
+          </div>
+         <div class="row">
+            <div class="col">
+              <p class="footer-text">Síguenos en redes sociales:</p>
+              <a href="#" class="footer-link"><i class="fab fa-facebook fa-2x "></i></a> 
+              <a href="#" class="footer-link"><i class="fab fa-twitter fa-2x"></i></a> 
+              <a href="#" class="footer-link"><i class="fab fa-instagram fa-2x"></i></a>
+              
+            </div>
+          </div>
+        </div>
+      </footer>
 </body>
 </html>
