--- a/recetas/empanadas.html
+++ b/recetas/empanadas.html
@@ -6,22 +6,22 @@
     <title>Empanadas</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../style.css" />
   </head>
   <body>
     <header>
-      <img src="./multimedia/logo.png" alt="Recetas Deliciosas" id="logo"> 
+      <img src="../multimedia/logo.png" alt="Recetas Deliciosas" id="logo"> 
       <nav class="nav">
          <ul class="list">
-          <li><a href="#nav--list">Inicio</a> </li>
-          <li><a href="registro.html">Registrate</a> </li>
-          <li><a href="productos.html">Productos</a> </li>
-          <li><a href="#barra">Recetas</a> </li>
-          <li><a href="#redesSociales">Contacto</a> </li>
+          <li><a href="../index.html">Inicio</a> </li>
+          <li><a href="../registro.html">Registrate</a> </li>
+          <li><a href="../productos.html">Productos</a> </li>
+          <li><a href="../#barra">Recetas</a> </li>
+          <li><a href="../#redesSociales">Contacto</a> </li>
          </ul>
       </nav>
 
-      <a href="productos.html" >
+      <a href="#" >
         <svg xmlns="http://www.w3.org/2000/svg" class="carrito" width="35"height="35"viewBox="0 0 512 496">
         <path fill="currentColor"d="M448 69H137l-3-12q-5-23-22.5-37.5T70 5H21q-9 0-15 6T0 27q0 9 6 15t15 6h49q19 0 22 17l49 256q6 21 23.5 34t38.5 13h202q10 0 16-6t6-15q0-22-22-22H203q-14 0-20-12l-2-9h214q20 0 36.5-12t22.5-31l58-123v-5q0-27-18.5-45.5T448 69zM192 261h-19l-28-149h47v149zm85 0h-42V112h42v149zm86 0h-43V112h43v149zm53-17v2q-3 10-11 13V112h43q18 0 21 17zM256 432q0 18-12.5 30.5T213 475q-17 0-29.5-12.5T171 432t12.5-30.5T213 389q18 0 30.5 12.5T256 432zm171 0q0 18-12.5 30.5T384 475t-30.5-12.5T341 432t12.5-30.5T384 389t30.5 12.5T427 432z"/>
         </svg> 
@@ -32,7 +32,7 @@
     </header>
     <main class="container-md">
       <h3 class="text-center mb-4 mt-4 tituloReceta"> Empanadas Venezolanas</h3>
-      <img class="  img_receta "src="multimedia/empanadas-venezolanas-.jpg"alt="empanadas" />
+      <img class="  img_receta "src="../multimedia/empanadas-venezolanas-.jpg"alt="empanadas" />
     
       <p><strong>Las empanadas venezolanas</strong> son unos pasteles en forma de media luna, se elaboran a base de harina de maíz que las hace distintivas de otros tipos de empanadas-  y cualquier tipo de relleno que aguante una fritura. Sin mencionar que son unas empanadas sin gluten, por lo que son apropiadas para este tipo de intolerancias.</p>
       <h5>Ingrediantes:</h5>
@@ -97,11 +97,11 @@
       </table>
       <P class="mt-3">¡Experimenta con nuevos sabores, crea platos deliciosos y deja que la música te acompañe mientras cocinas!</P>
        <audio controls>
-              <source src="multimedia/The Police - Every Breath You Take .mp3"type="audio/mp3">
+              <source src="../multimedia/The Police - Every Breath You Take .mp3"type="audio/mp3">
            </audio> 
       <p><strong>¿Te gustó la receta? Regístrate para seguir teniendo más recetas como esta</strong> </p>
 
-      <a href="registro.html">
+      <a href="../registro.html">
         <button type="button" class="btn btn-secondary" >Registrarme</button>
       </a>
       
