--- a/index.html
+++ b/index.html
@@ -39,9 +39,7 @@
         <input placeholder="Buscar recetas.." id="input"
           class="input" name="text" type="text"/>
       </div>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+      
     </header>
     
     <main>
@@ -53,13 +51,13 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="imagenes receta/imagenPrincipal.jpg" class="img-fluid d-block w-100" alt="imagen principal"style="height: 720px;">
+            <img src="imagenes receta/imagenPrincipal.jpg" class="imgprincipal img-fluid d-block w-100" alt="imagen principal"style="height: 720px;">
           </div>
           <div class="carousel-item">
-            <img src="imagenes receta/personasComiendo.jpg" class=" img-fluidd-block w-100" alt="Personas comiendo"style="height: 720px;">
+            <img src="imagenes receta/personasComiendo.jpg" class="imgprincipal img-fluidd-block w-100" alt="Personas comiendo"style="height: 720px;">
           </div>
           <div class="carousel-item">
-            <img src="imagenes receta/hombre-chef-cocinando-pollo-asiatico-cocina-cafe.jpg" class="img-fluid d-block w-100" alt="cheff"style="height: 720px;" >
+            <img src="imagenes receta/hombre-chef-cocinando-pollo-asiatico-cocina-cafe.jpg" class="imgprincipal img-fluid d-block w-100" alt="cheff"style="height: 720px;" >
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
