--- a/recetas/empanadas.html
+++ b/recetas/empanadas.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <header>
-      <a href="/index.html"><img src="../multimedia/logo.png" alt="Recetas Deliciosas" id="logo"> </a> 
+      <a href="../index.html"><img src="../multimedia/logo.png" alt="Recetas Deliciosas" id="logo"> </a> 
       <nav class="nav">
         
         <button class="abrir-menu navbar-toggler" aria-label="Abrir menú">
@@ -20,9 +20,9 @@
         </button>
            <ul class="list" id="nav--list">
            
-              <li><a href="#nav--list">Inicio</a> </li>
-              <li><a href="registro.html">Registrate</a> </li>
-              <li><a href="productos.html">Productos</a> </li>
+              <li><a href="../index.js">Inicio</a> </li>
+              <li><a href="../registro.html">Registrate</a> </li>
+              <li><a href="../productos.html">Productos</a> </li>
               <li><a href="#barra">Recetas</a> </li>
               <li><a href="#redesSociales">Contacto</a> </li>
               <li><a href="#" >
@@ -134,6 +134,7 @@
         </div>
       </div>
     </footer>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="../index.js"></script>
   </body>
 </html>
