Actualizar enlaces de navegación en index.html y registro.html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <header>
-      <a href="../index.html"><img src="./multimedia/logo.png" alt="Recetas Deliciosas" id="logo"> </a> 
+      <a href="index.html"><img src="./multimedia/logo.png" alt="Recetas Deliciosas" id="logo"> </a> 
       <nav class="nav">
         
         <button class="abrir-menu navbar-toggler" aria-label="Abrir menú">
