--- a/registro.html
+++ b/registro.html
@@ -11,7 +11,7 @@
 </head>
 <body >
   <header>
-    <a href="../index.html"><img src="../multimedia/logo.png" alt="Recetas Deliciosas" id="logo"> </a> 
+    <a href="index.html"><img src="multimedia/logo.png" alt="Recetas Deliciosas" id="logo"> </a> 
     <nav class="nav">
       
       <button class="abrir-menu navbar-toggler" aria-label="Abrir menú">
@@ -21,9 +21,9 @@
       </button>
          <ul class="list" id="nav--list">
          
-            <li><a href="../index.js">Inicio</a> </li>
-            <li><a href="../registro.html">Registrate</a> </li>
-            <li><a href="../productos.html">Productos</a> </li>
+            <li><a href="index.js">Inicio</a> </li>
+            <li><a href="registro.html">Registrate</a> </li>
+            <li><a href="productos.html">Productos</a> </li>
             <li><a href="#barra">Recetas</a> </li>
             <li><a href="#redesSociales">Contacto</a> </li>
             <li><a href="#" >
