--- a/registro.html
+++ b/registro.html
@@ -11,7 +11,7 @@
 </head>
 <body >
   <header>
-    <a href="index.html"><img src="multimedia/logo.png" alt="Recetas Deliciosas" id="logo"> </a> 
+    <a href="./index.html"><img src="./multimedia/logo.png" alt="Recetas Deliciosas" id="logo"> </a> 
     <nav class="nav">
       
       <button class="abrir-menu navbar-toggler" aria-label="Abrir menú">
@@ -120,6 +120,6 @@
     </div>
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-  <script src="../index.js"></script>
+  <script src="index.js"></script>
 </body>
 </html>
